tests/specs/ecosystem/halvardm/sqlx/0_0_0_5.test
halvardm/sqlx/0.0.0-5
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /vendor/deno.land/x/mysql@v2.12.1/src/client.ts:69:7
   | 
69 |   get pool() {
   |       ^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /vendor/deno.land/x/mysql@v2.12.1/src/client.ts:118:9
    | 
118 |   async useConnection<T>(fn: (conn: Connection) => Promise<T>) {
    |         ^^^^^^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /vendor/deno.land/x/mysql@v2.12.1/src/client.ts:69:7
   | 
69 |   get pool() {
   |       ^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /vendor/deno.land/x/mysql@v2.12.1/src/client.ts:118:9
    | 
118 |   async useConnection<T>(fn: (conn: Connection) => Promise<T>) {
    |         ^^^^^^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /vendor/deno.land/x/mysql@v2.12.1/src/client.ts:69:7
   | 
69 |   get pool() {
   |       ^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /vendor/deno.land/x/mysql@v2.12.1/src/client.ts:118:9
    | 
118 |   async useConnection<T>(fn: (conn: Connection) => Promise<T>) {
    |         ^^^^^^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /vendor/deno.land/x/mysql@v2.12.1/src/client.ts:69:7
   | 
69 |   get pool() {
   |       ^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /vendor/deno.land/x/mysql@v2.12.1/src/client.ts:118:9
    | 
118 |   async useConnection<T>(fn: (conn: Connection) => Promise<T>) {
    |         ^^^^^^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


